@@ -86,6 +86,9 @@ Extension Modules
 Library
 -------
 
+- Bug #1473760: ``tempfile.TemporaryFile()`` could hang on Windows, when
+  called from a thread spawned as a side effect of importing a module.
+
 - New modules: setuptools, easy_install, and pkg_resources, to support
   building, installing, and using Python eggs, respectively.
 
